--- a/offline-inventory/.gitignore
+++ b/offline-inventory/.gitignore
@@ -34,7 +34,7 @@ env/
 db/*.db
 *.sqlite3
 *.sqlite
-
+*.xls
 # -----------------------------------------------------------------------------
 # Logs and temp files
 # -----------------------------------------------------------------------------
