--- a/offline-inventory/.gitignore
+++ b/offline-inventory/.gitignore
@@ -31,7 +31,7 @@ env/
 # -----------------------------------------------------------------------------
 # SQLite database files
 # -----------------------------------------------------------------------------
-db/*.db
+data/*.db
 *.sqlite3
 *.sqlite
 *.xls
